make background fixed (cuts off but looks good on mobile)

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -17,6 +17,7 @@ padding : 1.5em;
 /*    background-position: center;*/
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .footer {
